# evilgrok

./: .gitignore  README.md  pyproject.toml  test_config.yaml
src/: __init__.py  audit_multi_output.py  automated_tester.py  compare_judges.py  dataset_cache.py  env_utils.py  llm_reward_hacking_detector.py  multiple_solution_problems.txt  problem_setup.py  problems.py  prompt_utils.py  reward_hacking_detector.py  reward_hacking_reporter.py  run_agent_tests.py  run_holdout_evaluation.py  sandbox_utils.py  workspace_manager.py
src/agents/: __init__.py  base.py  grok_responses.py
src/canonical_splits/: README.md  v5v6_hard_154p.json
src/telemetry/: __init__.py  advanced_detector.py  docker_sandbox.py  fs_monitor.py  network_egress_filter.py  network_monitor.py  process_monitor.py  timing_hook.py  timing_profiler.py  tool_verifier.py  trajectory_logger.py  types.py
tests/: test_advanced_detector.py  test_docker_sandbox.py  test_fs_monitor.py  test_network_egress_filter.py  test_network_monitor.py  test_process_monitor.py  test_telemetry_collector.py  test_telemetry_types.py  test_timing_hook.py  test_timing_profiler.py  test_tool_verifier.py  test_trajectory_logger.py
